Для шапки контента home-page фон безцветный.

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
         <!--Тело сайта-->
         <div class="main main--theme-white-gr">
             <!-- Контент для тела сайта-->
-            <div class="main__content main__content-inner main__content_theme-grey">
+            <div class="main__content main__content-inner main__content--theme-transparent">
                 <div class="main__content-flex-wrap">
                     <div class="unit unit--horizontal-double-unit unit--theme-yellow">
                         <h2 class="unit__title unit__title--big-bold unit__title--theme-unit-black-title">building the world around us</h2>
@@ -75,7 +75,7 @@
                         <hr class="unit__horizontal unit__horizontal--black-solid">
                         <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
                     </div>
-                    <div class="unit"></div>
+                    <div class="unit unit--theme-foto"></div>
                     <div class="unit unit--theme-info">
                         <input class="button button--theme-arrow button--arrow-next button--white-bg unit__button-center" type="button" value="">
                         <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">03<sup class="unit__info unit__info--med-text unit__info--black-text">/06</sup></span></div>
