установлен цвет для фона для unit с формой поиска

--- a/app/index.html
+++ b/app/index.html
@@ -103,12 +103,15 @@
                             <div class="icon icon--theme-play-arrow-down"></div><span class="unit__info unit__info--small-text unit__info--white-text">Contact us</span>
                         </div>
                     </div>
-                    <div class="unit unit--horizontal-double-unit unit--transparent">
-                        <div class="unit__form-search-wrap">
-                            <form class="form">
-                                <input class="form__input form__input--theme-unit-search form__input--border-bottom-only form__input--border-white" type="text" name="search-text" value="What you're looking for">
-                                <button class="form__button form__button--right-button form__button--theme-search-button"><i class="form__button-icon fa fa-search" aria-hidden="true"></i></button>
-                            </form>
+                    <div class="unit unit--bg-layer-unit">
+                        <div class="unit unit--bg-unit-width959 unit--dark-grey"></div>
+                        <div class="unit unit--horizontal-double-unit unit--transparent">
+                            <div class="unit__form-search-wrap">
+                                <form class="form">
+                                    <input class="form__input form__input--theme-unit-search form__input--border-bottom-only form__input--border-white" type="text" name="search-text" value="What you're looking for">
+                                    <button class="form__button form__button--right-button form__button--theme-search-button"><i class="form__button-icon fa fa-search" aria-hidden="true"></i></button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                     <div class="unit unit--horizontal-double-unit unit--white">
