--- a/app/index.html
+++ b/app/index.html
@@ -176,33 +176,39 @@
                             <div class="icon icon--light-bulb"></div>
                         </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">78 150</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Project Managments</span>
                     </div>
-                    <div class="unit unit--theme-yellow">
-                        <div class="unit__download-price-wrap">
-                            <div class="icon icon--icon-stars"></div><span class="unit__info unit__info--small-text unit__info--black-text">Work with us</span>
+                    <div class="unit unit--vertical-double-unit unit--white">
+                        <h2 class="unit__title unit__title--big-bold unit__title--uppercase-disabled unit__title--text-width">Contemporary Villa</h2>
+                        <hr class="unit__horizontal unit__horizontal--black-solid">
+                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.</p>
+                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From</p>
+                        <input class="button button--theme-unit-btn button--yellow-bg button--text-black unit__button-buttom-left" type="button" value="view project">
+                    </div>
+                    <div class="unit unit--big-bg-layer-unit unit--transparent">
+                        <div class="unit__bottom-right-unit-wrap">
+                            <div class="unit unit--theme-info">
+                                <input class="button button--theme-arrow button--arrow-next button--white-bg unit__button-center" type="button" value="">
+                                <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">01<sup class="unit__info unit__info--med-text unit__info--black-text">/09</sup></span></div>
+                                <input class="button button--theme-arrow button--arrow-prev button--white-bg unit__button-center" type="button" value="">
+                            </div>
                         </div>
                     </div>
-                    <div class="unit unit--theme-info">
-                        <input class="button button--theme-arrow button--arrow-next button--white-bg unit__button-center" type="button" value="">
-                        <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">01<sup class="unit__info unit__info--med-text unit__info--black-text">/09</sup></span></div>
-                        <input class="button button--theme-arrow button--arrow-prev button--white-bg unit__button-center" type="button" value="">
-                    </div>
-                    <div class="unit unit--theme-blue">
-                        <h2 class="unit__title unit__title--big-bold unit__title--letter-spacing018 unit__title--white-text">subscribe</h2>
-                        <hr class="unit__horizontal unit__horizontal--white-solid">
-                        <div class="unit__inner-form-aside">
-                            <form class="form">
-                                <input class="form__input form__input--theme-unit-search-white" type="text" name="email" value="E-mail">
-                                <input class="form__submit form__submit--theme-link-submit form__submit--small-text form__submit--white-text" type="submit" value="sign up">
-                            </form>
+                    <div class="unit unit--vertical-double-bg-layer-unit">
+                        <div class="unit unit--theme-yellow">
+                            <div class="unit__download-price-wrap">
+                                <div class="icon icon--icon-stars"></div><span class="unit__info unit__info--small-text unit__info--black-text">Work with us</span>
+                            </div>
+                        </div>
+                        <div class="unit unit--theme-blue">
+                            <h2 class="unit__title unit__title--big-bold unit__title--letter-spacing018 unit__title--white-text">subscribe</h2>
+                            <hr class="unit__horizontal unit__horizontal--white-solid">
+                            <div class="unit__inner-form-aside">
+                                <form class="form">
+                                    <input class="form__input form__input--theme-unit-search-white" type="text" name="email" value="E-mail">
+                                    <input class="form__submit form__submit--theme-link-submit form__submit--small-text form__submit--white-text" type="submit" value="sign up">
+                                </form>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="unit unit--vertical-double-unit unit--white">
-                    <h2 class="unit__title unit__title--big-bold unit__title--uppercase-disabled unit__title--text-width">Contemporary Villa</h2>
-                    <hr class="unit__horizontal unit__horizontal--black-solid">
-                    <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.</p>
-                    <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From</p>
-                    <input class="button button--theme-unit-btn button--yellow-bg button--text-black unit__button-buttom-left" type="button" value="view project">
                 </div>
             </div>
         </div>
