Подключение страницы our services как ссылка с главной страницы

--- a/app/index.html
+++ b/app/index.html
@@ -221,7 +221,7 @@
                     <!--Блок для меню-->
                     <div class="menu footer__container__menu-inner">
                         <ul class="menu__items">
-                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">Services</a></li>
+                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="our-services.html" target="blank">Services</a></li>
                             <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">OurWorks</a></li>
                             <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">News & events</a></li>
                             <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">Worck with us</a></li>
