--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
             <div class="main__content main__content-inner main__content--theme-transparent">
                 <div class="main__content-flex-wrap">
                     <div class="unit unit--horizontal-double-unit unit--theme-yellow">
-                        <h2 class="unit__title unit__title--big-bold unit__title--theme-unit-black-title">building the world around us</h2>
+                        <h2 class="unit__title unit__title--big-bold unit__title--top-margin2 unit__title--theme-unit-black-title">building the world around us</h2>
                         <hr class="unit__horizontal unit__horizontal--black-solid">
                         <p class="unit__article unit__article--theme-unit-black-text">Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.</p>
                         <input class="button button--theme-unit-btn button--black-bg button--text-white unit__button-buttom-left" type="button" value="Read more">
@@ -122,7 +122,7 @@
                         <p class="unit__article unit__article--text-ind unit__article--centered-text unit__article--theme-unit-black-text unit__article--gray-text">Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.</p>
                     </div>
                     <div class="unit unit--horizontal-double-unit">
-                        <h2 class="unit__title unit__title--big-bold unit__title--theme-unit-black-title">Your building is in good hands</h2>
+                        <h2 class="unit__title unit__title--big-bold unit__title--top-margin2 unit__title--theme-unit-black-title">Your building is in good hands</h2>
                         <hr class="unit__horizontal unit__horizontal--black-solid">
                         <p class="unit__article unit__article--theme-unit-black-text unit__article--text-width419">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
                         <input class="button button--theme-unit-btn button--black-bg button--text-white" type="button" value="About company">
@@ -149,11 +149,11 @@
                         </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">124 600</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Construction</span>
                     </div>
                     <div class="unit unit--theme-blue">
-                        <h2 class="unit__title unit__title--big-bold unit__title--letter-spacing018 unit__title--white-text">News</h2>
+                        <h2 class="unit__title unit__title--big-bold unit__title--letter-spacing018 unit__title--fix-margin-bottom-news unit__title--white-text">News</h2>
                         <p class="unit__info unit__info--norm-text unit__info--white-blue-text">12 february, 2015</p>
                         <h3 class="unit__title unit__title--bold unit__title--white-text">Project Design and Engineering Services</h3>
                         <p class="unit__info unit__info--norm-text unit__info--white-blue-text">23 comments</p>
-                        <div class="unit__horiz-inline-wrap">
+                        <div class="unit__horiz-inline-wrap unit__horiz-bottom-wrap">
                             <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--inline">
                             <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--opasity-half unit__horizontal--inline">
                             <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--opasity-half unit__horizontal--inline">
