Рефакторинг страницы home page, fix для кнопки с view project

--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,9 @@
                         <hr class="unit__horizontal unit__horizontal--black-solid">
                         <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.</p>
                         <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From</p>
-                        <input class="button button--theme-unit-btn button--yellow-bg button--text-black unit__button-buttom-left" type="button" value="view project">
+                        <div class="unit__fix-button-view-project-wrap">
+                            <input class="button button--theme-unit-btn button--yellow-bg button--text-black unit__button-buttom-left" type="button" value="view project">
+                        </div>
                     </div>
                     <div class="unit unit--big-bg-layer-unit unit--transparent">
                         <div class="unit__bottom-right-unit-wrap">
