--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,9 @@
                         <h2 class="unit__title unit__title--big-bold unit__title--top-margin2 unit__title--theme-unit-black-title">building the world around us</h2>
                         <hr class="unit__horizontal unit__horizontal--black-solid">
                         <p class="unit__article unit__article--theme-unit-black-text">Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.</p>
-                        <input class="button button--theme-unit-btn button--black-bg button--text-white unit__button-buttom-left" type="button" value="Read more">
+                        <div class="unit__fix-btn-read-more-wrap">
+                            <input class="button button--theme-unit-btn button--black-bg button--text-white unit__button-buttom-left" type="button" value="Read more">
+                        </div>
                     </div>
                     <div class="unit"></div>
                     <div class="unit unit--theme-info">
