--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
             <div class="main__content main__content-inner main__content--theme-transparent">
                 <div class="main__content-flex-wrap">
                     <div class="unit unit--horizontal-double-unit unit--theme-yellow">
-                        <h2 class="unit__title unit__title--big-bold unit__title--top-margin2 unit__title--theme-unit-black-title">building the world around us</h2>
+                        <h2 class="unit__title unit__title--big-bold unit__title--big-width unit__title--black-text">building the world around us</h2>
                         <hr class="unit__horizontal unit__horizontal--black-solid">
                         <p class="unit__article unit__article--theme-unit-black-text">Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.</p>
                         <div class="unit__fix-btn-read-more-wrap">
