--- a/app/index.html
+++ b/app/index.html
@@ -57,9 +57,12 @@
                                 <div class="icon icon--arrow-next-inside"></div>
                             </button>
                         </div>
-                        <!--input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")-->
                         <div class="unit__info-wrap"><span class="unit__info unit__info--big-medium unit__info--black-text">01<sup class="unit__info unit__info--medium unit__info--black-text">/03</sup></span></div>
-                        <input class="button button--theme-arrow button--arrow-prev button--white-bg unit__button-center" type="button" value="">
+                        <div class="unit__button-arrow-wrap">
+                            <button class="button button--theme-arrow button--arrow-prev">
+                                <div class="icon icon--arrow-prev-inside"></div>
+                            </button>
+                        </div>
                     </div>
                     <div class="unit"></div>
                     <div class="unit"></div>
