--- a/app/index.html
+++ b/app/index.html
@@ -69,8 +69,10 @@
                     <div class="unit unit--theme-company-video unit--theme-blue">
                         <div class="unit__company-video-wrap">
                             <button class="icon icon--theme-circle icon--blue-bg">
-                                <div class="icon icon--theme-play-arrow"></div>
-                            </button><span class="unit__info unit__info--small-text unit__info--white-text">Company video</span>
+                                <div class="icon icon--theme-circle-bg">
+                                    <div class="icon icon--theme-play-arrow"></div>
+                                </div>
+                            </button><span class="unit__info unit__info--small-medium unit__info--white-text unit__info--uppercase">Company video</span>
                         </div>
                     </div>
                     <div class="unit"></div>
