--- a/app/index.html
+++ b/app/index.html
@@ -77,9 +77,9 @@
                     </div>
                     <div class="unit"></div>
                     <div class="unit unit--theme-info">
-                        <h2 class="unit__title unit__title--big-bold unit__title--text-width">Our services</h2>
+                        <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--black-text">Our services</h2>
                         <hr class="unit__horizontal unit__horizontal--black-solid">
-                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
+                        <p class="unit__article unit__article--gray-text">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
                     </div>
                     <div class="unit unit--theme-foto"></div>
                     <div class="unit unit--theme-info">
