Рефакторинг страницы home page. Блок general contracting. Элемент стрелки блока вынесен в отдельный файл

--- a/app/index.html
+++ b/app/index.html
@@ -82,10 +82,13 @@
                         <p class="unit__article unit__article--gray-text">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
                     </div>
                     <div class="unit unit--theme-foto"></div>
-                    <div class="unit unit--theme-info">
-                        <h3 class="unit__title unit__title--bold unit__title--text-width">General Contracting</h3>
-                        <hr class="unit__horizontal unit__horizontal--black-solid">
-                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
+                    <div class="unit unit--bg-layer-unit">
+                        <div class="unit unit--theme-info">
+                            <h3 class="unit__title unit__title--med-bold unit__title--med-width-h3 unit__title--black-text">General Contracting</h3>
+                            <hr class="unit__horizontal unit__horizontal--black-solid">
+                            <p class="unit__article unit__article--gray-text">This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.</p>
+                        </div>
+                        <div class="unit__arrow unit__arrow--left"></div>
                     </div>
                     <div class="unit unit--theme-foto"></div>
                     <div class="unit unit--theme-info">
