--- a/app/index.html
+++ b/app/index.html
@@ -92,30 +92,45 @@
                     </div>
                     <div class="unit unit--theme-foto"></div>
                     <div class="unit unit--theme-info">
-                        <input class="button button--theme-arrow button--arrow-next button--white-bg unit__button-center" type="button" value="">
-                        <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">03<sup class="unit__info unit__info--med-text unit__info--black-text">/06</sup></span></div>
-                        <input class="button button--theme-arrow button--arrow-prev-hover button--white-bg unit__button-center" type="button" value="">
+                        <div class="unit__fix-padding-unit-with-arrow-hower"></div>
+                        <div class="unit__button-arrow-wrap">
+                            <button class="button button--theme-arrow button--arrow-next">
+                                <div class="icon icon--arrow-next-inside"></div>
+                            </button>
+                        </div>
+                        <div class="unit__info-wrap"><span class="unit__info unit__info--big-medium unit__info--black-text">03<sup class="unit__info unit__info--medium unit__info--black-text">/06</sup></span></div>
+                        <div class="unit__button-arrow-wrap">
+                            <button class="button button--theme-arrow button--arrow-prev-hover">
+                                <div class="icon icon--arrow-prev-inside"></div>
+                            </button>
+                        </div>
                     </div>
-                    <div class="unit unit--white">
-                        <h2 class="unit__title unit__title--bold unit__title--text-width">Project design and engineering</h2>
-                        <hr class="unit__horizontal unit__horizontal--black-solid">
-                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.</p>
+                    <div class="unit unit--bg-layer-unit">
+                        <div class="unit unit--white">
+                            <h3 class="unit__title unit__title--med-bold unit__title--med-width-h3 unit__title--black-text">Project design and engineering</h3>
+                            <hr class="unit__horizontal unit__horizontal--black-solid">
+                            <p class="unit__article unit__article--gray-text">Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.</p>
+                        </div>
+                        <div class="unit__arrow unit__arrow--right"></div>
                     </div>
                     <div class="unit unit--theme-foto"></div>
-                    <div class="unit unit--white">
-                        <h2 class="unit__title unit__title--bold unit__title--text-width">Capital improvements</h2>
-                        <hr class="unit__horizontal unit__horizontal--black-solid">
-                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">This results in scope creep and slippage of the schedule that ultimately result in additional costs to the owner.</p>
+                    <div class="unit unit--bg-layer-unit">
+                        <div class="unit unit--white">
+                            <h3 class="unit__title unit__title--med-bold unit__title--med-width-h3 unit__title--black-text">Capital improvements</h3>
+                            <hr class="unit__horizontal unit__horizontal--black-solid">
+                            <p class="unit__article unit__article--gray-text">This results in scope creep and slippage of the schedule that ultimately result in additional costs to the owner.</p>
+                        </div>
+                        <div class="unit__arrow unit__arrow--up"></div>
                     </div>
                     <div class="unit unit--theme-yellow">
                         <div class="unit__download-price-wrap">
-                            <div class="icon icon--theme-pdf"></div><span class="unit__info unit__info--small-text unit__info--black-text">Download price</span>
+                            <div class="icon icon--theme-pdf"></div><span class="unit__info unit__info--small-medium unit__info--black-text unit__info--uppercase">Download price</span>
                         </div>
                     </div>
                     <div class="unit unit--theme-blue">
                         <div class="unit__contact-us-wrap">
                             <div class="icon icon--theme-contact-circle"></div>
-                            <div class="icon icon--theme-play-arrow-down"></div><span class="unit__info unit__info--small-text unit__info--white-text">Contact us</span>
+                            <div class="icon icon--theme-play-arrow-down"></div><span class="unit__info unit__info--small-medium unit__info--white-text unit__info--uppercase">Contact us</span>
                         </div>
                     </div>
                     <div class="unit unit--bg-layer-unit">
