--- a/app/index.html
+++ b/app/index.html
@@ -129,7 +129,9 @@
                     </div>
                     <div class="unit unit--theme-blue">
                         <div class="unit__contact-us-wrap">
-                            <div class="icon icon--theme-contact-circle"></div>
+                            <div class="icon icon--theme-contact-circle">
+                                <div class="icon icon--theme-contact-circle-bg"></div>
+                            </div>
                             <div class="icon icon--theme-play-arrow-down"></div><span class="unit__info unit__info--small-medium unit__info--white-text unit__info--uppercase">Contact us</span>
                         </div>
                     </div>
