Рефакторинг страницы home page. Блоки с аватаром

--- a/app/index.html
+++ b/app/index.html
@@ -148,23 +148,23 @@
                     </div>
                     <div class="unit unit--horizontal-double-unit unit--white">
                         <div class="unit__person-info-wrap">
-                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-bold-text">Martin H.Jhonsons</span>
+                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">Martin H. Jhonsons</span>
                             <div class="icon icon--person-rate4"></div>
                         </div>
-                        <p class="unit__article unit__article--text-ind unit__article--centered-text unit__article--theme-unit-black-text unit__article--gray-text">Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.</p>
+                        <p class="unit__article unit__article--centered-text unit__article--gray-text">Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.</p>
                     </div>
                     <div class="unit unit--horizontal-double-unit">
-                        <h2 class="unit__title unit__title--big-bold unit__title--top-margin2 unit__title--theme-unit-black-title">Your building is in good hands</h2>
+                        <h2 class="unit__title unit__title--big-bold unit__title--big-width unit__title--black-text">Your building is in good hands</h2>
                         <hr class="unit__horizontal unit__horizontal--black-solid">
-                        <p class="unit__article unit__article--theme-unit-black-text unit__article--text-width419">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
+                        <p class="unit__article unit__article--black-text">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
                         <input class="button button--theme-unit-btn button--black-bg button--text-white" type="button" value="About company">
                     </div>
                     <div class="unit unit--horizontal-double-unit unit--soft-gold">
                         <div class="unit__person-info-wrap">
-                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-bold-text">Tony SH. Schults</span>
+                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">Tony SH. Schults</span>
                             <div class="icon icon--person-rate5"></div>
                         </div>
-                        <p class="unit__article unit__article--text-ind unit__article--centered-text unit__article--theme-unit-black-text unit__article--grey-yellow-text">When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from concept-through-construction.</p>
+                        <p class="unit__article unit__article--centered-text unit__article--grey-yellow-text">When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from concept-through-construction.</p>
                         <div class="unit__horiz-inline-center-wrap">
                             <hr class="unit__horizontal unit__horizontal--black-solid unit__horizontal--width-small unit__horizontal--opasity-half unit__horizontal--inline">
                             <hr class="unit__horizontal unit__horizontal--black-solid unit__horizontal--width-small unit__horizontal--inline">
