Рефакторинг страницы home page. Блоки c голубыми иконками

--- a/app/index.html
+++ b/app/index.html
@@ -172,12 +172,16 @@
                     </div>
                     <div class="unit unit--white">
                         <div class="icon icon--blue-square">
-                            <div class="icon icon--ligthinig-blue"></div>
+                            <div class="icon icon--blue-square-bg">
+                                <div class="icon icon--ligthinig-blue"></div>
+                            </div>
                         </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">55 000</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Expert Witness</span>
                     </div>
                     <div class="unit">
                         <div class="icon icon--blue-square">
-                            <div class="icon icon--raindrop"></div>
+                            <div class="icon icon--blue-square-bg">
+                                <div class="icon icon--raindrop"></div>
+                            </div>
                         </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">124 600</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Construction</span>
                     </div>
                     <div class="unit unit--theme-blue">
@@ -200,12 +204,16 @@
                     </div>
                     <div class="unit">
                         <div class="icon icon--blue-square">
-                            <div class="icon icon--setting-tool-blue"></div>
+                            <div class="icon icon--blue-square-bg">
+                                <div class="icon icon--setting-tool-blue"></div>
+                            </div>
                         </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">18 000</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Procurement</span>
                     </div>
                     <div class="unit unit--white">
                         <div class="icon icon--blue-square">
-                            <div class="icon icon--light-bulb"></div>
+                            <div class="icon icon--blue-square-bg">
+                                <div class="icon icon--light-bulb"></div>
+                            </div>
                         </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">78 150</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Project Managments</span>
                     </div>
                     <div class="unit unit--vertical-double-unit unit--white">
