Рефакторинг страницы home page. Закончены блоки все

--- a/app/index.html
+++ b/app/index.html
@@ -175,20 +175,20 @@
                             <div class="icon icon--blue-square-bg">
                                 <div class="icon icon--ligthinig-blue"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">55 000</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Expert Witness</span>
+                        </div><span class="unit__info unit__info--block unit__info--big-medium unit__info--dark-grey-text">55 000</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Expert Witness</span>
                     </div>
-                    <div class="unit">
+                    <div class="unit unit--theme-foto">
                         <div class="icon icon--blue-square">
-                            <div class="icon icon--blue-square-bg">
+                            <div class="icon icon--blue-square-bg icon--blue-square-bg--grey">
                                 <div class="icon icon--raindrop"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">124 600</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Construction</span>
+                        </div><span class="unit__info unit__info--block unit__info--big-medium unit__info--dark-grey-text">124 600</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Construction</span>
                     </div>
                     <div class="unit unit--theme-blue">
-                        <h2 class="unit__title unit__title--big-bold unit__title--letter-spacing018 unit__title--fix-margin-bottom-news unit__title--white-text">News</h2>
-                        <p class="unit__info unit__info--norm-text unit__info--white-blue-text">12 february, 2015</p>
-                        <h3 class="unit__title unit__title--bold unit__title--white-text">Project Design and Engineering Services</h3>
-                        <p class="unit__info unit__info--norm-text unit__info--white-blue-text">23 comments</p>
+                        <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--letter-spacing018 unit__title--white-text">News</h2>
+                        <p class="unit__info unit__info--norm-medium unit__info--white-blue-text">12 february, 2015</p>
+                        <h3 class="unit__title unit__title--med-bold unit__title--white-text">Project Design and Engineering Services</h3>
+                        <p class="unit__info unit__info--norm-medium unit__info--white-blue-text">23 comments</p>
                         <div class="unit__horiz-inline-wrap unit__horiz-bottom-wrap">
                             <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--inline">
                             <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--opasity-half unit__horizontal--inline">
@@ -197,27 +197,28 @@
                     </div>
                     <div class="unit unit--white">
                         <div class="unit__person-info-wrap">
-                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-bold-text unit__info--black-text">David Mc. Adams</span>
+                            <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">David Mc. Adams</span>
                             <div class="icon icon--person-rate4"></div>
                         </div>
-                        <p class="unit__article unit__article--text-ind unit__article--centered-text unit__article--theme-unit-black-text unit__article--gray-text">In most urban areas, construction has already built existing structures, many having been standing for decades.</p>
+                        <p class="unit__article unit__article--centered-text unit__article--gray-text">In most urban areas, construction has already built existing structures, many having been standing for decades.</p>
                     </div>
-                    <div class="unit">
+                    <div class="unit unit--theme-foto">
                         <div class="icon icon--blue-square">
-                            <div class="icon icon--blue-square-bg">
+                            <div class="icon icon--blue-square-bg icon--blue-square-bg--grey">
                                 <div class="icon icon--setting-tool-blue"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">18 000</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Procurement</span>
+                        </div><span class="unit__info unit__info--block unit__info--big-medium unit__info--dark-grey-text">18 000</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Procurement</span>
                     </div>
                     <div class="unit unit--white">
                         <div class="icon icon--blue-square">
                             <div class="icon icon--blue-square-bg">
                                 <div class="icon icon--light-bulb"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block unit__info--big-text unit__info--dark-grey-text">78 150</span><span class="unit__info unit__info--block unit__info--norm-text unit__info--grey-text unit__info--letter-spacing035">Project Managments</span>
+                        </div><span class="unit__info unit__info--block unit__info--big-medium unit__info--dark-grey-text">78 150</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Project Managments</span>
                     </div>
                     <div class="unit unit--vertical-double-unit unit--white">
-                        <h2 class="unit__title unit__title--big-bold unit__title--uppercase-disabled unit__title--text-width">Contemporary Villa</h2>
+                        <!--.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text-->
+                        <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--black-text unit__title--uppercase-disabled">Contemporary Villa</h2>
                         <hr class="unit__horizontal unit__horizontal--black-solid">
                         <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.</p>
                         <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From</p>
@@ -228,20 +229,29 @@
                     <div class="unit unit--big-bg-layer-unit unit--transparent">
                         <div class="unit__bottom-right-unit-wrap">
                             <div class="unit unit--theme-info">
-                                <input class="button button--theme-arrow button--arrow-next button--white-bg unit__button-center" type="button" value="">
-                                <div class="unit__info-wrap"><span class="unit__info unit__info--big-text unit__info--black-text">01<sup class="unit__info unit__info--med-text unit__info--black-text">/09</sup></span></div>
-                                <input class="button button--theme-arrow button--arrow-prev button--white-bg unit__button-center" type="button" value="">
+                                <div class="unit__fix-padding-unit-with-arrow-hower"></div>
+                                <div class="unit__button-arrow-wrap">
+                                    <button class="button button--theme-arrow button--arrow-next">
+                                        <div class="icon icon--arrow-next-inside"></div>
+                                    </button>
+                                </div>
+                                <div class="unit__info-wrap"><span class="unit__info unit__info--big-medium unit__info--black-text">01<sup class="unit__info unit__info--medium unit__info--black-text">/09</sup></span></div>
+                                <div class="unit__button-arrow-wrap">
+                                    <button class="button button--theme-arrow button--arrow-prev">
+                                        <div class="icon icon--arrow-prev-inside"></div>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="unit unit--vertical-double-bg-layer-unit">
                         <div class="unit unit--theme-yellow">
                             <div class="unit__download-price-wrap">
-                                <div class="icon icon--icon-stars"></div><span class="unit__info unit__info--small-text unit__info--black-text">Work with us</span>
+                                <div class="icon icon--icon-stars"></div><span class="unit__info unit__info--small-medium unit__info--black-text unit__info--uppercase">Work with us</span>
                             </div>
                         </div>
                         <div class="unit unit--theme-blue">
-                            <h2 class="unit__title unit__title--big-bold unit__title--letter-spacing018 unit__title--white-text">subscribe</h2>
+                            <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--letter-spacing018 unit__title--white-text">subscribe</h2>
                             <hr class="unit__horizontal unit__horizontal--white-solid">
                             <div class="unit__inner-form-aside">
                                 <form class="form">
