--- a/app/index.html
+++ b/app/index.html
@@ -153,11 +153,11 @@
                         </div>
                         <p class="unit__article unit__article--centered-text unit__article--gray-text">Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.</p>
                     </div>
-                    <div class="unit unit--horizontal-double-unit">
-                        <h2 class="unit__title unit__title--big-bold unit__title--big-width unit__title--black-text">Your building is in good hands</h2>
+                    <div class="unit unit--horizontal-double-unit unit--theme-foto">
+                        <h2 class="unit__title unit__title--big-bold unit__title--big-width unit__title--black-text unit__title--fix-big-width">Your building is in good hands</h2>
                         <hr class="unit__horizontal unit__horizontal--black-solid">
-                        <p class="unit__article unit__article--black-text">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
-                        <input class="button button--theme-unit-btn button--black-bg button--text-white" type="button" value="About company">
+                        <p class="unit__article unit__article--black-text unit__article--fix-for-your-buildig-is">Our mission is to provide the highest level of service for our client-partners from concept through construction.</p>
+                        <input class="button button--theme-unit-btn button--black-bg button--text-white button--fix-btn-about-company" type="button" value="About company">
                     </div>
                     <div class="unit unit--horizontal-double-unit unit--soft-gold">
                         <div class="unit__person-info-wrap">
