--- a/app/index.html
+++ b/app/index.html
@@ -186,8 +186,8 @@
                     </div>
                     <div class="unit unit--theme-blue">
                         <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--letter-spacing018 unit__title--white-text">News</h2>
-                        <p class="unit__info unit__info--norm-medium unit__info--white-blue-text">12 february, 2015</p>
-                        <h3 class="unit__title unit__title--med-bold unit__title--white-text">Project Design and Engineering Services</h3>
+                        <p class="unit__info unit__info--norm-medium unit__info--white-blue-text unit__info--fix-for-news">12 february, 2015</p>
+                        <h3 class="unit__title unit__title--med-regular unit__title--white-text unit__title--fix-for-news">Project Design and Engineering Services</h3>
                         <p class="unit__info unit__info--norm-medium unit__info--white-blue-text">23 comments</p>
                         <div class="unit__horiz-inline-wrap unit__horiz-bottom-wrap">
                             <hr class="unit__horizontal unit__horizontal--white-solid unit__horizontal--width-small unit__horizontal--inline">
