--- a/app/index.html
+++ b/app/index.html
@@ -217,16 +217,15 @@
                         </div><span class="unit__info unit__info--block unit__info--big-medium unit__info--dark-grey-text">78 150</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Project Managments</span>
                     </div>
                     <div class="unit unit--vertical-double-unit unit--white">
-                        <!--.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text-->
-                        <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--black-text unit__title--uppercase-disabled">Contemporary Villa</h2>
+                        <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--black-text unit__title--uppercase-disabled unit__title--fix-for-contemporary-vila">Contemporary Villa</h2>
                         <hr class="unit__horizontal unit__horizontal--black-solid">
-                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.</p>
-                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text">We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From</p>
+                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text unit__article--fix-for-contemporary-vila">Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.</p>
+                        <p class="unit__article unit__article--theme-unit-black-text unit__article--gray-text unit__article--fix-for-contemporary-vila">We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From</p>
                         <div class="unit__fix-button-view-project-wrap">
-                            <input class="button button--theme-unit-btn button--yellow-bg button--text-black unit__button-buttom-left" type="button" value="view project">
+                            <input class="button button--theme-unit-btn button--yellow-bg button--text-black unit__button-buttom-left button--fix-btn-view-project" type="button" value="view project">
                         </div>
                     </div>
-                    <div class="unit unit--big-bg-layer-unit unit--transparent">
+                    <div class="unit unit--big-bg-layer-unit unit--theme-foto">
                         <div class="unit__bottom-right-unit-wrap">
                             <div class="unit unit--theme-info">
                                 <div class="unit__fix-padding-unit-with-arrow-hower"></div>
