Рефакторинг страницы home page. Footer fix

--- a/app/index.html
+++ b/app/index.html
@@ -272,13 +272,13 @@
                     <!--Блок для меню-->
                     <div class="menu footer__container__menu-inner">
                         <ul class="menu__items">
-                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="our-services.html" target="blank">Services</a></li>
-                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">OurWorks</a></li>
-                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">News & events</a></li>
-                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">Worck with us</a></li>
-                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">F.A.Q</a></li>
-                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">Contact us</a></li>
-                            <li class="menu__item"><a class="menu__item_text footer_theme-text-menu" href="#">Shop</a></li>
+                            <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="our-services.html" target="blank">Services</a></li>
+                            <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">OurWorks</a></li>
+                            <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">News & events</a></li>
+                            <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">Worck with us</a></li>
+                            <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">F.A.Q</a></li>
+                            <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">Contact us</a></li>
+                            <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">Shop</a></li>
                         </ul>
                     </div>
                 </div>
