--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
                                 <div class="icon icon--arrow-next-inside"></div>
                             </button>
                         </div>
-                        <div class="unit__info-wrap"><span class="unit__info unit__info--big-medium unit__info--black-text">01<sup class="unit__info unit__info--medium unit__info--black-text">/03</sup></span></div>
+                        <div class="unit__info-wrap"><span class="unit__info unit__info--big-medium unit__info--black-text unit__info--letter-spacing3">01<sup class="unit__info unit__info--medium unit__info--black-text">/03</sup></span></div>
                         <div class="unit__button-arrow-wrap">
                             <button class="button button--theme-arrow button--arrow-prev">
                                 <div class="icon icon--arrow-prev-inside"></div>
@@ -98,7 +98,7 @@
                                 <div class="icon icon--arrow-next-inside"></div>
                             </button>
                         </div>
-                        <div class="unit__info-wrap"><span class="unit__info unit__info--big-medium unit__info--black-text">03<sup class="unit__info unit__info--medium unit__info--black-text">/06</sup></span></div>
+                        <div class="unit__info-wrap"><span class="unit__info unit__info--biggest-medium unit__info--black-text unit__info--letter-spacing1">03<sup class="unit__info unit__info--medium23 unit__info--black-text"> / 06</sup></span></div>
                         <div class="unit__button-arrow-wrap">
                             <button class="button button--theme-arrow button--arrow-prev-hover">
                                 <div class="icon icon--arrow-prev-inside"></div>
@@ -175,14 +175,14 @@
                             <div class="icon icon--blue-square-bg">
                                 <div class="icon icon--ligthinig-blue"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block unit__info--big-medium unit__info--dark-grey-text">55 000</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Expert Witness</span>
+                        </div><span class="unit__info unit__info--block41 unit__info--big-medium unit__info--dark-grey-text unit__info--letter-spacing3">55 000</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Expert Witness</span>
                     </div>
                     <div class="unit unit--theme-foto">
                         <div class="icon icon--blue-square">
                             <div class="icon icon--blue-square-bg icon--blue-square-bg--grey">
                                 <div class="icon icon--raindrop"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block unit__info--big-medium unit__info--dark-grey-text">124 600</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Construction</span>
+                        </div><span class="unit__info unit__info--block41 unit__info--big-medium unit__info--dark-grey-text unit__info--letter-spacing3">124 600</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Construction</span>
                     </div>
                     <div class="unit unit--theme-blue">
                         <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--letter-spacing018 unit__title--white-text">News</h2>
@@ -207,14 +207,14 @@
                             <div class="icon icon--blue-square-bg icon--blue-square-bg--grey">
                                 <div class="icon icon--setting-tool-blue"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block unit__info--big-medium unit__info--dark-grey-text">18 000</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Procurement</span>
+                        </div><span class="unit__info unit__info--block41 unit__info--big-medium unit__info--dark-grey-text unit__info--letter-spacing3">18 000</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Procurement</span>
                     </div>
                     <div class="unit unit--white">
                         <div class="icon icon--blue-square">
                             <div class="icon icon--blue-square-bg">
                                 <div class="icon icon--light-bulb"></div>
                             </div>
-                        </div><span class="unit__info unit__info--block unit__info--big-medium unit__info--dark-grey-text">78 150</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Project Managments</span>
+                        </div><span class="unit__info unit__info--block41 unit__info--big-medium unit__info--dark-grey-text unit__info--letter-spacing3">78 150</span><span class="unit__info unit__info--block unit__info--norm-medium unit__info--grey-text">Project Managments</span>
                     </div>
                     <div class="unit unit--vertical-double-unit unit--white">
                         <h2 class="unit__title unit__title--big-bold unit__title--med-width unit__title--black-text unit__title--uppercase-disabled unit__title--fix-for-contemporary-vila">Contemporary Villa</h2>
@@ -234,7 +234,7 @@
                                         <div class="icon icon--arrow-next-inside"></div>
                                     </button>
                                 </div>
-                                <div class="unit__info-wrap"><span class="unit__info unit__info--big-medium unit__info--black-text">01<sup class="unit__info unit__info--medium unit__info--black-text">/09</sup></span></div>
+                                <div class="unit__info-wrap"><span class="unit__info unit__info--big-medium unit__info--black-text unit__info--letter-spacing3">01<sup class="unit__info unit__info--medium unit__info--black-text"> / 09</sup></span></div>
                                 <div class="unit__button-arrow-wrap">
                                     <button class="button button--theme-arrow button--arrow-prev">
                                         <div class="icon icon--arrow-prev-inside"></div>
