Рефакторинг страницы home-page. Горизонтальные черные полоски

--- a/app/index.html
+++ b/app/index.html
@@ -164,8 +164,9 @@
                             <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">Tony SH. Schults</span>
                             <div class="icon icon--person-rate5"></div>
                         </div>
-                        <p class="unit__article unit__article--centered-text unit__article--grey-yellow-text">When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from concept-through-construction.</p>
-                        <div class="unit__horiz-inline-center-wrap">
+                        <p class="unit__article unit__article--centered-text unit__article--margin-top10 unit__article--grey-yellow-text">When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from</p>
+                        <!--*concept-through-construction.*/-->
+                        <div class="unit__horiz-inline-center-bottom-wrap">
                             <hr class="unit__horizontal unit__horizontal--black-solid unit__horizontal--width-small unit__horizontal--opasity-half unit__horizontal--inline">
                             <hr class="unit__horizontal unit__horizontal--black-solid unit__horizontal--width-small unit__horizontal--inline">
                         </div>
