Рефакторинг страницы home-page. Блоки с аватаром. Райтинг person. Также созданы отдельные файлы для элементов горизонтальной линии и числа

--- a/app/index.html
+++ b/app/index.html
@@ -149,7 +149,10 @@
                     <div class="unit unit--horizontal-double-unit unit--white">
                         <div class="unit__person-info-wrap">
                             <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">Martin H. Jhonsons</span>
-                            <div class="icon icon--person-rate4"></div>
+                            <div class="unit__person-rate-inline-wrap">
+                                <div class="icon icon--person-rate4"></div>
+                                <div class="icon icon--person-rate1none"></div>
+                            </div>
                         </div>
                         <p class="unit__article unit__article--centered-text unit__article--gray-text">Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.</p>
                     </div>
@@ -162,7 +165,9 @@
                     <div class="unit unit--horizontal-double-unit unit--soft-gold">
                         <div class="unit__person-info-wrap">
                             <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">Tony SH. Schults</span>
-                            <div class="icon icon--person-rate5"></div>
+                            <div class="unit__person-rate-inline-wrap">
+                                <div class="icon icon--person-rate5"></div>
+                            </div>
                         </div>
                         <p class="unit__article unit__article--centered-text unit__article--margin-top10 unit__article--grey-yellow-text">When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from</p>
                         <!--*concept-through-construction.*/-->
