Рефакторинг страницы home-page. Рефакторинг footer

--- a/app/index.html
+++ b/app/index.html
@@ -204,7 +204,10 @@
                     <div class="unit unit--white">
                         <div class="unit__person-info-wrap">
                             <div class="icon icon--person-avatar"></div><span class="unit__info unit__info--norm-medium unit__info--black-text">David Mc. Adams</span>
-                            <div class="icon icon--person-rate4"></div>
+                            <div class="unit__person-rate-inline-wrap">
+                                <div class="icon icon--person-rate4"></div>
+                                <div class="icon icon--person-rate1none"></div>
+                            </div>
                         </div>
                         <p class="unit__article unit__article--centered-text unit__article--gray-text">In most urban areas, construction has already built existing structures, many having been standing for decades.</p>
                     </div>
@@ -279,7 +282,7 @@
                     <div class="menu footer__container__menu-inner">
                         <ul class="menu__items">
                             <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="our-services.html" target="blank">Services</a></li>
-                            <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">OurWorks</a></li>
+                            <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu footer_theme-text-mark" href="#">OurWorks</a></li>
                             <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">News & events</a></li>
                             <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">Worck with us</a></li>
                             <li class="menu__item footer__container--menu-items-space"><a class="menu__item_text footer_theme-text-menu" href="#">F.A.Q</a></li>
