Рефакторинг страницы home-page. В header загружена картинка

--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,12 @@
         <!-- Шапка сайта-->
         <header class="header header--theme-home-page">
             <!-- Фон для шапки сайта-->
-            <div class="header__bg header__bg-inner header__bg_theme-gray header__bg--height-home-page"></div>
+            <div class="header__bg header__bg-inner header__bg_theme-gray header__bg--height-home-page"><img src="../img/header-home-920px.jpg" width="920px" height="826px" alt="head banner"></div>
             <div class="header__bg header__bg-inner header__bg--theme-dark-grey header__bg--height-home-page header__bg--part-right"></div>
             <!-- Контент для шапки-->
             <div class="header__content header__content-inner">
                 <!--Фон в контенте шапки-->
-                <div class="header__content-bg header__content-bg-inner header__content-bg_theme-gray header__content-bg--height-home-page"></div>
+                <div class="header__content-bg header__content-bg-inner header__content-bg__theme-transparent header__content-bg--height-home-page"></div>
                 <!--Контейнер в контенте шапки для содержимого типа лого, меню и т.д-->
                 <div class="header__container header__content-container-inner">
                     <!-- Блок для Лого-->
